refactor welcome page to use Bootstrap for layout and styles; add footer section

--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -73,4 +73,11 @@
       <a class="btn btn-light btn-lg" href="#login">Get Started</a>
     </div>
   </section>
+
+  <!-- Footer Section -->
+  <footer class="mt-auto py-4 bg-dark text-white-50">
+    <div class="container text-center">
+      <small>Copyright &copy; BaaS Bank 2024. All Rights Reserved.</small>
+    </div>
+  </footer>
 </div>
