--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-/* You can add global styles to this file, and also import other style files */
+
+.icon-circle {
+  width: 4rem;
+  height: 4rem;
+}
