--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
           </h5>
           <hr>
           <p class="card-text">View your account balances and recent activity.</p>
-          <a href="#" class="btn btn-sm btn-outline-primary">View Accounts</a>
+          <a routerLink="/accounts" class="btn btn-sm btn-outline-primary">View Accounts</a>
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
           </h5>
           <hr>
           <p class="card-text">Make payments or view your payment history.</p>
-          <a href="#" class="btn btn-sm btn-outline-primary">Make a Payment</a>
+          <a routerLink="/payments" class="btn btn-sm btn-outline-primary">Make a Payment</a>
         </div>
       </div>
     </div>
@@ -49,7 +49,7 @@
           </h5>
           <hr>
           <p class="card-text">View your recent transaction history.</p>
-          <a href="#" class="btn btn-sm btn-outline-primary">View Transactions</a>
+          <a routerLink="/transactions" class="btn btn-sm btn-outline-primary">View Transactions</a>
         </div>
       </div>
     </div>
