--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -61,12 +61,11 @@
                   <td>{{ transaction.timestamp | date:'short' }}</td>
                   <td>{{ transaction.description }}</td>
                   <td>{{ transaction.accountNumber }}</td>
-                  <td>
-                    <span [class]="getTransactionTypeClass(transaction.transactionType)">
-                      <i [class]="'bi ' + getTransactionIcon(transaction.transactionType) + ' me-1'"></i>
-                      {{ transaction.transactionType }}
+                  <td>                    <span [class]="getTransactionTypeClass(transaction.type)">
+                      <i [class]="'bi ' + getTransactionIcon(transaction.type) + ' me-1'"></i>
+                      {{ transaction.type }}
                     </span>
-                  </td>                  <td [class]="getTransactionTypeClass(transaction.transactionType)">
+                  </td>                  <td [class]="getTransactionTypeClass(transaction.type)">
                     {{ transaction.amount | currencyFormat }}
                   </td>
                   <td>{{ (transaction.balance || 0) | currencyFormat }}</td>
